Kubernetes Project/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: api
  template:
    metadata:
      labels:
        component: api
    spec:
      containers:
      - name: blog-api
        image: parthav030121/simple_blog_api
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
          - containerPort: 3000
